--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<h1> keerthika</h1>
-<h2>keerthika</h2>
-<h3>keerthika</h3>
-<h4>keerthika</h4>
-<h5>keerthika</h5>
-<h6>keerthika</h6>
-<h7>keerthika</h7>
-<p>when we use h7 tag it considers as a paragraph</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Thanu</h1>
+    <h4>from Hit-3</h4>
+    <img src="cover.jpg"
+</body>
+</html>
