--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Style CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Thanu</h1>
-    <h4>from Hit-3</h4>
-    <img src="cover.jpg"
+    <h1 id="one">Hello </h1>
+    <h2 class="name">Mrec</h2>
+    <p style="background-color:lightblue"; align="center">
+     Styling is the process of applying visual design elements to the web page</p>
 </body>
 </html>
